--- a/src/apm/frmMain.resx
+++ b/src/apm/frmMain.resx
@@ -117,4 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Cb.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAvAAAAAIB
+        AAAAAQAAAACNAAAAQ29tbWFuZEJhcnMgQ29udHJvbCBDb3B5cmlnaHQgKGMpIDIwMDMtMjAxMyBDb2Rl
+        am9jayBTb2Z0d2FyZQ0KUFJPRFVDVC1JRDogQ29kZWpvY2suQ29tbWFuZEJhcnMuQWN0aXZlWC52MTYu
+        Mg0KVkFMSURBVEUtQ09ERTogUVFTLVBORi1PSlYtVkJYAAAAABoAAAACABAAewIAAHsCAAAAAAAAAAAA
+        AAEAAAAAAAs=
+</value>
+  </data>
 </root>
